--- a/DiseInter/tarea_bootstrap/profesional.html
+++ b/DiseInter/tarea_bootstrap/profesional.html
@@ -1,13 +1,45 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="profesional.css">
 </head>
+
 <body>
-    
+    <h1>Mi perfil profesional</h1>
+    <div class="container-fluid" id="contenedor">
+        <div class="card" style="width: 18rem;">
+            <img src="img/experiencia.png" class="card-img-top" alt="...">
+            <div class="card-body">
+                <p class="card-text">
+                    He tenido trabajos orientados a la atención al publico desde siempre, siendo muy pocos los que no
+                    han sido asi.
+                </p>
+            </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+            <img src="img/estudios.png" class="card-img-top" alt="...">
+            <div class="card-body">
+                <p class="card-text">
+                    Decidi darle un cambio a mi vida y es por eso que me anote a estudiar desarrollo web.
+                </p>
+            </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+            <img src="img/futuro.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+                <p class="card-text">
+                    Es por eso que en el futuro espero trabajar en el sector de la informatica.
+                </p>
+            </div>
+        </div>
+    </div>
+    <a href="index.html"><button type="button" class="btn btn-link" id="volver">Volver</button></a>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
