--- a/DiseInter/tarea_bootstrap/sobremi.html
+++ b/DiseInter/tarea_bootstrap/sobremi.html
@@ -1,13 +1,83 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="sobremi.css">
 </head>
+
 <body>
-    
+    <h1>Sobre mí</h1>
+    <div class="container-fluid">
+        <div class="card" style="width: 18rem;" id="mate">
+            <img src="img/mate_e.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                    card's content.</p>
+            </div>
+        </div>
+        <div class="card" style="width: 18rem;" id="goku">
+            <img src="img/goku_e.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                    card's content.</p>
+            </div>
+        </div>
+        
+        <div class="card" style="width: 18rem;" id="box">
+            <img src="img/box_e.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                    card's content.</p>
+            </div>
+        </div>
+    </div>
+    <div class="container-fluid">
+        <div class="card" style="width: 18rem;" id="peter">
+            <img src="img/peter_e.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                    card's content.</p>
+            </div>
+        </div>
+        <div class="card" style="width: 18rem;" id="asado">
+            <img src="img/asado_e.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                    card's content.</p>
+            </div>
+        </div>
+        <div class="card" style="width: 18rem;" id="dante">
+            <img src="img/dante_e.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                    card's content.</p>
+            </div>
+        </div>
+    </div>
+    <a href="index.html"><button type="button" class="btn btn-link" id="volver">Volver</button></a>
+
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+        const tarjetas = document.getElementsByClassName("card")
+        for (const tarjeta of tarjetas) {
+            tarjeta.addEventListener("mouseover", () => {
+                tarjeta.querySelector("img").src = `img/${tarjeta.id}.gif`;
+                tarjeta.style.opacity = "100%";
+                tarjeta.style.transition = ".5s ease";
+            })
+            tarjeta.addEventListener("mouseout", () => {
+                tarjeta.querySelector("img").src = `img/${tarjeta.id}_e.jpg`;
+                tarjeta.style.opacity = "30%";
+
+            })
+        }
+
+    </script>
 </body>
+
 </html>
