--- a/DiseInter/tarea_bootstrap/contacto.html
+++ b/DiseInter/tarea_bootstrap/contacto.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="contacto.css">
+    <link rel="stylesheet" href="estilos/comun.css">
+    <link rel="stylesheet" href="estilos/contacto.css">
 </head>
 
 <body>
