--- a/DiseInter/tarea_bootstrap/index.html
+++ b/DiseInter/tarea_bootstrap/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="estilos/comun.css">
+    <link rel="stylesheet" href="estilos/style.css">
 </head>
 
 <body>
@@ -40,7 +41,7 @@
           <div class="carousel-item">
             <a href="contacto.html"><img src="img/correo.png" class="d-block w-100" alt="..."></a>
             <div class="carousel-caption d-none d-md-block">
-              <h5>Contacta con nosotros</h5>
+              <h5>Contacta conmigo</h5>
             </div>
           </div>
         </div>
