--- a/DiseInter/tarea_bootstrap/sobremi.html
+++ b/DiseInter/tarea_bootstrap/sobremi.html
@@ -6,55 +6,75 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="sobremi.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="estilos/comun.css">
+    <link rel="stylesheet" href="estilos/sobremi.css">
 </head>
 
 <body>
     <h1>Sobre mí</h1>
-    <div class="container-fluid">
+    <div id="silenciar">
+
+    </div>
+    <audio autoplay loop id="musica">
+        <source src="audio/Bersuit Vergarabat - La Argentinidad Al Palo.mp3" type="audio/mpeg">
+    </audio>
+    <div class="container-fluid tarjetas">
         <div class="card" style="width: 18rem;" id="mate">
             <img src="img/mate_e.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                    card's content.</p>
+                <p class="card-text">
+                    Como todo argentino de bien, disfruto de tomar unos mates en cualquier momento del día.
+                </p>
             </div>
         </div>
         <div class="card" style="width: 18rem;" id="goku">
             <img src="img/goku_e.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                    card's content.</p>
+                <p class="card-text">
+                    Desde chico vi animes como Dragon Ball, motivandome siempre a querer ser alguien fuerte como los
+                    personajes que veia en la tele.
+                </p>
             </div>
         </div>
-        
+
         <div class="card" style="width: 18rem;" id="box">
             <img src="img/box_e.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                    card's content.</p>
+                <p class="card-text">
+                    Practique muchos deportes, pero las artes marciales y los deportes de contacto son mi pasión, siendo
+                    lo que saca lo mejor de mi.
+                </p>
             </div>
         </div>
     </div>
-    <div class="container-fluid">
+    <div class="container-fluid tarjetas">
         <div class="card" style="width: 18rem;" id="peter">
             <img src="img/peter_e.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                    card's content.</p>
+                <p class="card-text">
+                    Al igual que lo hicieron los animes, los superheroes y las peliculas tambien era algo que veia
+                    siempre.
+                </p>
             </div>
         </div>
         <div class="card" style="width: 18rem;" id="asado">
             <img src="img/asado_e.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                    card's content.</p>
+                <p class="card-text">
+                    Si hablamos del mate no podemos dejar atras el asado. No hay nada que me haga mas feliz que
+                    disfrutar de un buen asado, aunque yo lo prefiero a la brasa, no como en la imagen
+                </p>
             </div>
         </div>
         <div class="card" style="width: 18rem;" id="dante">
             <img src="img/dante_e.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                    card's content.</p>
+                <p class="card-text">
+                    Por ultimo los videojuegos. Estan presentes desde que jugaba al sega con mis hermanos, fueron mi
+                    primer acercamiento a la programación y son lo que me mantiene conectado con las personas de mi
+                    país
+                </p>
             </div>
         </div>
     </div>
@@ -63,6 +83,9 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script>
+        const volumen = document.getElementById("silenciar")
+        const musica = document.getElementById("musica")
+        var sonando;
         const tarjetas = document.getElementsByClassName("card")
         for (const tarjeta of tarjetas) {
             tarjeta.addEventListener("mouseover", () => {
@@ -77,6 +100,21 @@
             })
         }
 
+        window.addEventListener("load", () => {
+            volumen.innerHTML = '<button style="background: none; border: none;"><i class="bi bi-volume-mute-fill"></i></button>';
+            sonando = true;
+        })
+        volumen.addEventListener("click", () => {
+            if (sonando) {
+                musica.volume = 0;
+                volumen.innerHTML = '<button style="background: none; border: none;"><i class="bi bi-volume-up-fill"></i></button>';
+                sonando = false;
+            } else {
+                musica.volume = 1;
+                volumen.innerHTML = '<button style="background: none; border: none;"><i class="bi bi-volume-mute-fill"></i></button>';
+                sonando = true;
+            }
+        })
     </script>
 </body>
 
